FEM-3056 location overview mobile layout alignment fixed

--- a/htmls/src/styles/components/_access.scss
+++ b/htmls/src/styles/components/_access.scss
@@ -5,7 +5,6 @@
     .access-section-container {
         .access-contact {
             display: flex;
-            padding-bottom: 1.25rem;
             flex-direction: column;
             align-items: flex-start;
             flex-shrink: 0;
@@ -101,7 +100,17 @@
     @include media-breakpoint-down(md) {
         .access-section-container {
             .access-contact {
-                padding: 1.5rem;
+                margin-left: 1.25rem;
+                margin-right: 1.25rem;
+                padding-bottom: 0rem;
+
+                .access-contact-container {
+
+                    .access-contact-item {
+                        align-items: start;
+                        gap: 0rem;
+                    }
+                }
             }
             .container {
                 padding: 0;
@@ -117,6 +126,11 @@
                 .youtube-container iframe {
                     width: 360px;
                     height: 270px;
+                }
+
+                .multimedia-section img {
+                    height: 260px;
+                    object-fit: cover;
                 }
             }
         }
